feat: 🎸 create activity
